--- a/tpl/app/less/stb/1080.less
+++ b/tpl/app/less/stb/1080.less
@@ -35,3 +35,25 @@
 
 @scrollBarHeight: 8 * 1.5;
 @scrollBarWidth:  8 * 1.5;
+
+
+// redefine common vars
+@scrollBarWidth         : 2 * 1.5;
+
+
+// magsdk components vars
+@safePadding            :20 * 1.5;
+@pagePadding            :50 * 1.5;
+// grey panel
+@panelWidth             :355 * 1.5;
+@panelHeight            :480 * 1.5;
+@panelTitleHeight       :60 * 1.5;
+@panelMainWidth         :480 * 1.5;
+@panelMainHeight        :560 * 1.5;
+@panelMain2xWidth       :780 * 1.5;
+@panelMainTitleHeight   :70 * 1.5;
+@panelMainTitleFontSize :24 * 1.5;
+@leftPanelTop           :115 * 1.5;
+@mainPanelTop           :70 * 1.5;
+@mainPanelLeft          :400 * 1.5;
+@panelShadowWidth       :20 * 1.5;
