--- a/tpl/app/less/stb/480.less
+++ b/tpl/app/less/stb/480.less
@@ -35,3 +35,25 @@
 
 @scrollBarHeight: 4;
 @scrollBarWidth:  4;
+
+// TODO:fix correct vars
+// redefine common vars
+@scrollBarWidth         : 2;
+
+
+// magsdk components vars
+@safePadding            :20;
+@pagePadding            :50;
+// grey panel
+@panelWidth             :355;
+@panelHeight            :480;
+@panelTitleHeight       :60;
+@panelMainWidth         :480;
+@panelMainHeight        :560;
+@panelMain2xWidth       :780;
+@panelMainTitleHeight   :70;
+@panelMainTitleFontSize :24;
+@leftPanelTop           :115;
+@mainPanelTop           :70;
+@mainPanelLeft          :400;
+@panelShadowWidth       :20;
