--- a/tpl/app/less/stb/components.less
+++ b/tpl/app/less/stb/components.less
@@ -41,3 +41,5 @@
 @import "./ui/radio.list.less";
 @import "./ui/scroll.area.less";
 @import "./ui/value.list.less";
+@import "./ui/panel.set.less";
+@import "./ui/panel.ex.less";
