--- a/tpl/app/less/stb/ui/list.less
+++ b/tpl/app/less/stb/ui/list.less
@@ -5,7 +5,6 @@
 
 
 .component.list {
-    background-color: #333;
     //display: table;
     //table-layout: fixed;
     width:            100%;
@@ -23,18 +22,16 @@
         //display: table-row;
 
         &.mark {
-            background-color: green;
+            //background-color: green;
             color:            black;
         }
 
         &.focus {
-            background-color: orange;
-            color:            black;
+           // background-color: orange;
         }
 
         &.focus.mark {
-            background-color: #AE7200;
-            color:            white;
+           // background-color: #AE7200;
         }
     }
     //}
