fix modal.list component

--- a/tpl/app/less/stb/ui/modal.list.less
+++ b/tpl/app/less/stb/ui/modal.list.less
@@ -1,14 +1,14 @@
-.component.ModalList {
-    width:unit(@availWidth, px);
-    height:unit(@availHeight, px);
+.component.modalList {
+    width:unit(@width, px);
+    height:unit(@height, px);
     position:absolute;
-    left:unit(@safePadding, px);
-    top:unit(@safePadding, px);
+    left:0;
+    top:0;
     display:table;
 
     > div.wrapperCell {
-        width:unit(@availWidth, px);
-        height:unit(@availHeight, px);
+        width:unit(@width, px);
+        height:unit(@height, px);
         display:table-cell;
         vertical-align:middle;
 
