--- a/tpl/app/less/stb/components.less
+++ b/tpl/app/less/stb/components.less
@@ -26,6 +26,7 @@
 @import "./ui/input.less";
 @import "./ui/list.less";
 @import "./ui/modal.box.less";
+@import "./ui/modal.box.ex.less";
 @import "./ui/modal.message.less";
 @import "./ui/page.less";
 @import "./ui/panel.less";
