radio list less

--- a/tpl/app/less/stb/ui/radio.list.less
+++ b/tpl/app/less/stb/ui/radio.list.less
@@ -2,6 +2,14 @@
     > .item {
         .checkBoxWrapper > .component.checkBox {
             display : block;
+            &:after {
+                font-family: 'icons';
+                display: block;
+                content: 'W';
+            }
+            &.checked:after {
+                content: 'X';
+            }
         }
     }
 }
