--- a/tpl/app/less/stb/ui/list.less
+++ b/tpl/app/less/stb/ui/list.less
@@ -15,7 +15,7 @@
 
     > .item {
         cursor:         pointer;
-        padding:        0 unit(@listItemPaddingX, px);
+        padding:        0;
         vertical-align: middle;
         height:         unit(@listItemHeight, px);
         line-height:    unit(@listItemHeight, px);
