--- a/tpl/app/less/stb/ui/list.less
+++ b/tpl/app/less/stb/ui/list.less
@@ -13,7 +13,7 @@
     //> .body {
     //display : table-column;
 
-    > .item {
+    .item {
         cursor:         pointer;
         padding:        0;
         vertical-align: middle;
@@ -27,11 +27,11 @@
         }
 
         &.focus {
-           // background-color: orange;
+            // background-color: orange;
         }
 
         &.focus.mark {
-           // background-color: #AE7200;
+            // background-color: #AE7200;
         }
     }
     //}
@@ -46,7 +46,7 @@
     //> .body {
     //display : table-row;
 
-    > .item {
+    .item {
         display:        table-cell;
         text-align:     center;
         vertical-align: middle;
