--- a/tpl/app/less/stb/ui/modal.message.less
+++ b/tpl/app/less/stb/ui/modal.message.less
@@ -50,12 +50,12 @@
                 height:unit(@panelTitleHeight, px);
                 line-height:unit(@panelTitleHeight, px);
                 text-align:left;
-                padding:0;
+                padding:0 unit(@safePadding, px);
 
                 .component.checkBox, .component.layout > div.icon {
                     height:unit(@panelTitleHeight, px);
                     line-height:unit(@panelTitleHeight, px);
-                    width:unit(@panelTitleHeight, px);
+                    width:unit(@panelTitleHeight * 2 / 3, px);
                 }
             }
         }
