--- a/tpl/app/less/stb/ui/panel.ex.less
+++ b/tpl/app/less/stb/ui/panel.ex.less
@@ -17,6 +17,7 @@
     .list .item{
         height: unit(@panelTitleHeight, px);
         line-height: unit(@panelTitleHeight, px);
+        font-size: unit(@fontSize * 0.9, px);
     }
     &.main {
         width: unit(@panelMainWidth, px);
@@ -27,6 +28,7 @@
         .list .item{
             height: unit(@panelMainTitleHeight, px);
             line-height: unit(@panelMainTitleHeight, px);
+            font-size: unit(@fontSize, px);
         }
         >.title {
             height: unit(@panelMainTitleHeight, px);
