--- a/tpl/app/less/stb/ui/modal.message.less
+++ b/tpl/app/less/stb/ui/modal.message.less
@@ -57,6 +57,9 @@
                     line-height:unit(@panelTitleHeight, px);
                     width:unit(@panelTitleHeight * 2 / 3, px);
                 }
+                .component.checkBox {
+                    width:unit(@safePadding / 2, px);
+                }
             }
         }
     }
