--- a/tpl/app/less/stb/ui/modal.message.less
+++ b/tpl/app/less/stb/ui/modal.message.less
@@ -58,7 +58,7 @@
                     width:unit(@panelTitleHeight * 2 / 3, px);
                 }
                 .component.checkBox {
-                    width:unit(@safePadding / 2, px);
+                    width:unit(@panelTitleHeight / 2, px);
                 }
             }
         }
