--- a/tpl/app/less/stb/ui/panel.ex.less
+++ b/tpl/app/less/stb/ui/panel.ex.less
@@ -70,13 +70,15 @@
         display: none;
     }
     &.active {
-        z-index: 3;
         >.overlay {
             visibility: hidden;
         }
         .component.scrollBar {
             display: block;
         }
+    }
+    &.top {
+        z-index: 3;
     }
     >.shadow {
         width: unit(@panelShadowWidth, px);
