--- a/tpl/app/less/stb/ui/modal.message.less
+++ b/tpl/app/less/stb/ui/modal.message.less
@@ -12,12 +12,15 @@
     display:table;
     z-index:10;
 
+    &.active > div > div > div.overlay { display:none; }
+
     > div {
         display:table-cell;
         vertical-align:middle;
         text-align:center;
 
         > div {
+            position: relative;
             display:inline-block;
             overflow:hidden;
             max-width:80%;
@@ -60,6 +63,14 @@
                 .component.checkBox {
                     width:unit(@panelTitleHeight / 2, px);
                 }
+            }
+            & > div.overlay {
+                display:block;
+                width: 100%;
+                height: 100%;
+                position: absolute;
+                top: 0;
+                left: 0;
             }
         }
     }
