--- a/tpl/app/less/stb/ui/modal.message.less
+++ b/tpl/app/less/stb/ui/modal.message.less
@@ -20,7 +20,7 @@
         text-align:center;
 
         > div {
-            position: relative;
+            position:relative;
             display:inline-block;
             overflow:hidden;
             max-width:80%;
@@ -31,6 +31,7 @@
                 height:unit(@panelMainTitleHeight, px);
                 line-height:unit(@panelMainTitleHeight, px);
                 font-size:unit(@panelMainTitleFontSize, px);
+                padding:0 unit(@safePadding, px);
 
                 .icon {
                     height:unit(@buttonHeight, px);
@@ -41,7 +42,6 @@
 
                 .text {
                     display:table-cell;
-                    padding-left:unit(@safePadding, px);
                     vertical-align:middle;
                     text-align:center;
 
@@ -66,11 +66,11 @@
             }
             & > div.overlay {
                 display:block;
-                width: 100%;
-                height: 100%;
-                position: absolute;
-                top: 0;
-                left: 0;
+                width:100%;
+                height:100%;
+                position:absolute;
+                top:0;
+                left:0;
             }
         }
     }
