--- a/tpl/app/less/stb/ui/modal.message.less
+++ b/tpl/app/less/stb/ui/modal.message.less
@@ -34,6 +34,7 @@
                 padding:0 unit(@safePadding, px);
 
                 .icon {
+                    font-size:unit(@fontSize * 1.75, px);
                     height:unit(@buttonHeight, px);
                     width:unit(@buttonHeight, px);
                     display:table-cell;
@@ -55,9 +56,10 @@
                 padding:0 unit(@safePadding, px);
 
                 .component.checkBox, .component.layout > div.icon {
+                    font-size:unit(@fontSize * 1.75, px);
                     height:unit(@panelTitleHeight, px);
                     line-height:unit(@panelTitleHeight, px);
-                    width:unit(@panelTitleHeight / 2, px);
+                    width:unit(@panelTitleHeight * 0.75, px);
                     text-align:left;
                 }
             }
