remove icon font size

--- a/tpl/app/less/stb/ui/modal.message.less
+++ b/tpl/app/less/stb/ui/modal.message.less
@@ -34,7 +34,7 @@
                 padding:0 unit(@safePadding, px);
 
                 .icon {
-                    font-size:unit(@fontSize * 1.75, px);
+                    //font-size:unit(@fontSize * 1.75, px);
                     height:unit(@buttonHeight, px);
                     width:unit(@buttonHeight, px);
                     display:table-cell;
@@ -56,7 +56,7 @@
                 padding:0 unit(@safePadding, px);
 
                 .component.checkBox, .component.layout > div.icon {
-                    font-size:unit(@fontSize * 1.75, px);
+                    //font-size:unit(@fontSize * 1.75, px);
                     height:unit(@panelTitleHeight, px);
                     line-height:unit(@panelTitleHeight, px);
                     width:unit(@panelTitleHeight * 0.75, px);
