small resolution rework and fix

--- a/tpl/app/less/576.less
+++ b/tpl/app/less/576.less
@@ -13,3 +13,53 @@
 
 // common app styles
 @import "main";
+
+.component.panelEx {
+    &.main {
+        &.position-right {
+            left: 240px;
+        }
+        &.position-left {
+            left: 90px;
+        }
+    }
+    &.right {
+        >.title {
+            background: #151515;
+            -webkit-transform: rotate(90deg);
+            width: unit(@panelHeight, px);
+            position: absolute;
+            top: 157px;
+            right: -158px;
+            text-align: center;
+            padding: 0;
+            z-index: 1;
+
+        }
+    }
+    &.left {
+        >.title {
+            background: #151515;
+            -webkit-transform: rotate(-90deg);
+            width: unit(@panelHeight, px);
+            position: absolute;
+            top: 157px;
+            left: -158px;
+            text-align: center;
+            padding: 0;
+            z-index: 1;
+
+        }
+    }
+    &.expand >.title {
+        //background: red;
+        width: inherit;
+        -webkit-transform: none;
+        position: static;
+        text-align: left;
+        padding-left: unit(@safePadding, px);
+    }
+    >.shadow {
+        //display: none!important;
+    }
+}
