--- a/tpl/app/less/stb/1080.less
+++ b/tpl/app/less/stb/1080.less
@@ -56,4 +56,4 @@
 @leftPanelTop           :115 * 1.5;
 @mainPanelTop           :70 * 1.5;
 @mainPanelLeft          :400 * 1.5;
-@panelShadowWidth       :20 * 1.5;
+@panelShadowWidth       :20;
