fix css footer display bug

--- a/tpl/app/less/stb/ui/footer.less
+++ b/tpl/app/less/stb/ui/footer.less
@@ -25,7 +25,7 @@
 
                 & > .wrapper {
                     height:unit(@panelMainTitleHeight / 2, px);
-                    visibility:visible;
+                    visibility:inherit;
                     &.hidden { visibility:hidden; }
 
                     & > .left, & > .right {
