--- a/tpl/app/less/stb/ui/clock.less
+++ b/tpl/app/less/stb/ui/clock.less
@@ -1,6 +1,6 @@
 @clockBlockHeight: (@panelMainHeight - @panelHeight) / 2;
 // clock
-.component.clock div {
+.component.clock {
     color: #fff;
     height: unit(@clockBlockHeight, px);
     right: unit(@pagePadding, px);
