add footer less variables
feature: 7100

--- a/tpl/app/less/stb/1080.less
+++ b/tpl/app/less/stb/1080.less
@@ -57,3 +57,8 @@
 @mainPanelTop           :70 * 1.5;
 @mainPanelLeft          :400 * 1.5;
 @panelShadowWidth       :20;
+// footer
+@footerHeight           :36 * 1.5;
+@footerPadding          :40 * 1.5;
+@footerPaddingBottom    :38 * 1.5;
+@footerButtonsPadding   :20 * 1.5;
