--- a/tpl/app/less/stb/480.less
+++ b/tpl/app/less/stb/480.less
@@ -56,6 +56,11 @@
 @mainPanelTop           :60;
 @mainPanelLeft          :200;
 @panelShadowWidth       :10;
+// footer
+@footerHeight           :28;
+@footerPadding          :40;
+@footerPaddingBottom    :24;
+@footerButtonsPadding   :10;
 
 .component.panelEx {
     &.main {
