--- a/tpl/app/less/stb/576.less
+++ b/tpl/app/less/stb/576.less
@@ -56,6 +56,11 @@
 @mainPanelTop           :80;
 @mainPanelLeft          :200;
 @panelShadowWidth       :10;
+// footer
+@footerHeight           :32;
+@footerPadding          :40;
+@footerPaddingBottom    :34;
+@footerButtonsPadding   :10;
 
 .component.panelEx {
     &.main {
