--- a/tpl/app/less/stb/720.less
+++ b/tpl/app/less/stb/720.less
@@ -56,3 +56,8 @@
 @mainPanelTop           :70;
 @mainPanelLeft          :400;
 @panelShadowWidth       :20;
+// footer
+@footerHeight           :36;
+@footerPadding          :40;
+@footerPaddingBottom    :38;
+@footerButtonsPadding   :20;
