--- a/tpl/app/less/stb/ui/footer.less
+++ b/tpl/app/less/stb/ui/footer.less
@@ -4,12 +4,12 @@
 // @license GNU GENERAL PUBLIC LICENSE Version 3
 
 .component.footer {
-    width:unit(@width - 2 * @pagePadding, px);
-    height:unit(@panelMainTitleHeight / 2, px);
-    line-height:unit(@panelMainTitleHeight / 2, px);
+    width:unit(@width - 2 * @footerPadding, px);
+    height:unit(@footerHeight, px);
+    line-height:unit(@footerHeight, px);
     position:absolute;
-    left:unit(@pagePadding, px);
-    bottom:unit(@safePadding, px);
+    left:unit(@footerPadding, px);
+    bottom:unit(@footerPaddingBottom, px);
     display:table;
     z-index:10;
 
@@ -18,39 +18,39 @@
         text-align:center;
 
         & > tr > td {
-            width:unit(@panelMainTitleHeight / 2, px);
+            width:unit(@footerHeight, px);
 
             &.central {
-                width:unit(@width - 2 * @pagePadding - @panelMainTitleHeight, px);
+                width:unit(@width - @footerPadding * 2 - @footerHeight * 2, px);
 
                 & > .wrapper {
-                    height:unit(@panelMainTitleHeight / 2, px);
+                    height:unit(@footerHeight, px);
                     visibility:inherit;
                     &.hidden { visibility:hidden; }
 
                     & > .button {
                         display:inline-block;
-                        height:unit(@panelMainTitleHeight / 2, px);
-                        padding:0 unit(@buttonPaddingX, px);
+                        height:unit(@footerHeight, px);
+                        padding:0 unit(@footerButtonsPadding, px);
 
                         &.hidden { display:none; }
 
-                        .f1, .f2, .f3, .f4 { width:unit(@panelMainTitleHeight / 2, px); }
+                        .f1, .f2, .f3, .f4 {
+                            width:unit(@footerHeight, px);
+                            float:left;
+                        }
                     }
                 }
             }
 
             .icon {
-                width:unit(@panelMainTitleHeight / 2, px);
                 display:block;
-                float:left;
                 background:no-repeat center center;
             }
 
             .title {
                 display:block;
                 float:right;
-                text-align:center;
             }
         }
     }
