--- a/tpl/app/less/stb/ui/modal.message.less
+++ b/tpl/app/less/stb/ui/modal.message.less
@@ -12,9 +12,9 @@
     display:table;
     z-index:10;
 
-    &.active > div > div > div.overlay { display:none; }
+    &.active > div.alignBox > div > div.overlay { display:none; }
 
-    > div {
+    > div.alignBox {
         display:table-cell;
         vertical-align:middle;
         text-align:center;
