footer: fix padding
feature: 7100

--- a/tpl/app/less/stb/ui/footer.less
+++ b/tpl/app/less/stb/ui/footer.less
@@ -31,7 +31,7 @@
                     & > .button {
                         display:inline-block;
                         height:unit(@footerHeight, px);
-                        padding:0 unit(@footerButtonsPadding, px);
+                        padding:0 unit(@footerButtonsPadding, px) 0 unit(@footerButtonsPadding * 0.75, px);
 
                         &.hidden { display:none; }
 
