footer: fix padding
feature: 7100

--- a/tpl/app/less/stb/ui/footer.less
+++ b/tpl/app/less/stb/ui/footer.less
@@ -35,6 +35,8 @@
 
                         &.hidden { display:none; }
 
+                        .title { padding-left:unit(@footerButtonsPadding/2, px); }
+
                         .f1, .f2, .f3, .f4 {
                             width:unit(@footerHeight, px);
                             float:left;
