--- a/tpl/app/less/stb/ui/modal.message.less
+++ b/tpl/app/less/stb/ui/modal.message.less
@@ -34,7 +34,6 @@
                 padding:0 unit(@safePadding, px);
 
                 .icon {
-                    //font-size:unit(@fontSize * 1.75, px);
                     height:unit(@buttonHeight, px);
                     width:unit(@buttonHeight, px);
                     display:table-cell;
@@ -53,14 +52,13 @@
             & > div.body > .component.list .item {
                 height:unit(@panelTitleHeight, px);
                 line-height:unit(@panelTitleHeight, px);
-                padding:0 unit(@safePadding, px);
+                padding:0 unit(@safePadding, px) 0 0;
 
                 .component.checkBox, .component.layout > div.icon {
-                    //font-size:unit(@fontSize * 1.75, px);
+                    width:unit(@panelTitleHeight, px);
                     height:unit(@panelTitleHeight, px);
                     line-height:unit(@panelTitleHeight, px);
-                    width:unit(@panelTitleHeight * 0.75, px);
-                    text-align:left;
+                    text-align:center;
                 }
             }
             & > div.overlay {
