--- a/tpl/src/jade/main.jade
+++ b/tpl/src/jade/main.jade
@@ -3,12 +3,52 @@ html
     head
         title=title
         meta(charset="utf-8")
-        link(rel="icon", type="image/png", href="img/favicon.png")
+        link(rel="icon", type="image/png", href="app/img/favicon.png")
+
+        script.
+            if ( !Function.prototype.bind ) {
+                Function.prototype.bind = function ( oThis ) {
+                    if ( typeof this !== 'function' ) {
+                        // closest thing possible to the ECMAScript 5
+                        // internal IsCallable function
+                        throw new TypeError('Function.prototype.bind - what is trying to be bound is not callable');
+                    }
+
+                    var aArgs   = Array.prototype.slice.call(arguments, 1),
+                        fToBind = this,
+                        fNOP    = function () {},
+                        fBound  = function () {
+                            return fToBind.apply(this instanceof fNOP && oThis
+                                    ? this
+                                    : oThis,
+                                aArgs.concat(Array.prototype.slice.call(arguments)));
+                        };
+
+                    fNOP.prototype = this.prototype;
+                    fBound.prototype = new fNOP();
+
+                    return fBound;
+                };
+            }
 
         if develop
-            script(type='text/javascript', src='js/develop.js')
+            script(type='text/javascript', src='app/js/develop.js')
+            if livereload
+            script(type='text/javascript', src=livereload)
         else
-            script(type='text/javascript', src='js/release.js')
+            script(type='text/javascript', src='app/js/release.js')
+
+        if weinre
+            script(type='text/javascript', src=weinreSrc)
+
+        script(type='text/javascript', language='javascript', src='$MANAGER_WIDGET/Common/API/Widget.js')
+        script(type='text/javascript', language='javascript', src='$MANAGER_WIDGET/Common/API/TVKeyValue.js')
+        script(type='text/javascript', src='$MANAGER_WIDGET/Common/webapi/1.0/webapis.js')
+
+
+        object#plugin(classid='clsid:SAMSUNG-INFOLINK-SEF', style='position:absolute;left:0px;top:0px;width:0px;height:0px')
+        object#pluginPlayer(border='0', classid='clsid:SAMSUNG-INFOLINK-PLAYER', style='position:absolute;left:0px;top:0px;width:0px;height:0px')
+        object#pluginObjectAudio(border='0', classid='clsid:SAMSUNG-INFOLINK-AUDIO', style='opacity:0.0;background-color:#000000;width:0px;height:0px;')
 
     body
         include ./pages/init.jade
