add layout  to header

--- a/tpl/src/less/stb/576.less
+++ b/tpl/src/less/stb/576.less
@@ -56,6 +56,9 @@
 @mainPanelTop           :80;
 @mainPanelLeft          :200;
 @panelShadowWidth       :10;
+@panelAmountHeight		:18;
+@panelAmountWidth		:10;
+@panelAmountCWidth		:70;
 // footer
 @footerHeight           :32;
 @footerPaddingBottom    :34;
