--- a/tpl/src/less/stb/480.less
+++ b/tpl/src/less/stb/480.less
@@ -56,6 +56,9 @@
 @mainPanelTop           :60;
 @mainPanelLeft          :200;
 @panelShadowWidth       :10;
+@panelAmountHeight		:18;
+@panelAmountWidth		:10;
+@panelAmountCWidth		:70;
 // footer
 @footerHeight           :28;
 @footerPaddingBottom    :24;
