--- a/tpl/src/less/stb/720.less
+++ b/tpl/src/less/stb/720.less
@@ -56,6 +56,9 @@
 @mainPanelTop           :68;
 @mainPanelLeft          :400;
 @panelShadowWidth       :20;
+@panelAmountHeight		:24;
+@panelAmountWidth		:14;
+@panelAmountCWidth		:90;
 // footer
 @footerHeight           :36;
 @footerPaddingBottom    :38;
