add layout  to header

--- a/tpl/src/less/stb/1080.less
+++ b/tpl/src/less/stb/1080.less
@@ -57,6 +57,9 @@
 @mainPanelTop           :66 * 1.5;
 @mainPanelLeft          :400 * 1.5;
 @panelShadowWidth       :20;
+@panelAmountHeight		:24 * 1.5;
+@panelAmountWidth		:14 * 1.5;
+@panelAmountCWidth		:90 * 1.5;
 // footer
 @footerHeight           :36 * 1.5;
 @footerPaddingBottom    :38 * 1.5;
