--- a/tpl/src/less/stb/ui/panel.ex.less
+++ b/tpl/src/less/stb/ui/panel.ex.less
@@ -23,7 +23,7 @@
             text-transform: uppercase;
         }
 
-        .amountConteiner {
+        .amountContainer {
             width: unit(@panelAmountCWidth, px);
 
             .amount {
